--- a/index.html
+++ b/index.html
@@ -47,25 +47,28 @@
 
     section {
       padding: 2rem 2rem;
-      max-width: 1000px;
       margin: auto;
+
+    }
+    .hero-section {
+      background: linear-gradient(to bottom, #303d4a, #ffffff);
+
     }
 
     .hero {
-      max-width: 1200px;
-      background-color: #f1f1f1;
+      max-width: 800px;
+      background-color: #ffffffd5;
+
       text-align: center;
-      padding: 4rem 2rem;
-      margin-top: 2rem;
-      margin-left: 1rem;
-      margin-right: 1rem;
+      padding: 3rem 2rem;
+      margin: auto;
       border-radius: 10px;
       box-shadow: 1px 3px gray;
     }
 
     .hero h1 {
       color: #303d4a;
-      font-size: 3rem;
+      font-size: 2rem;
       margin-bottom: 1rem;
     }
 
@@ -142,10 +145,12 @@
             </nav>
         </header>
 
-<section class="hero">
-  <h1>Secure Your Code.</h1><h1>Strenghten Your Strategy.</h1>
-  <p>Vector Strategies delivers expert consultancy in application security, software quality, and modern development practices.</p>
-  <a href="#contact"><button>Contact us</button></a>
+<section class="hero-section">
+  <div class="hero">
+    <h1>Secure Your Code.</h1><h1>Strenghten Your Strategy.</h1>
+    <p>Vector Strategies delivers expert consultancy in application security, software quality, and modern development practices.</p>
+    <a href="#contact"><button>Contact us</button></a>
+  </div>
 </section>
 
 <section id="about">
