Update Mail Address

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 <section id="contact">
   <h2>Contact Us</h2>
-  <form action="mailto:your@email.com" method="POST" enctype="text/plain">
+  <form action="mailto:contact@vector-code.xyz" method="POST" enctype="text/plain">
     <input type="text" name="name" placeholder="Your Name" required />
     <input type="email" name="email" placeholder="Your Email" required />
     <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
